--- a/3D.html
+++ b/3D.html
@@ -134,7 +134,7 @@
 <!-- home page portfolio section -->
 <section class="w3l-portflioblock" id="awards">
     <div class="midd-w3 py-5">
-        <div class="container py-lg-4 py-md-3">
+        <div >
             <div class="contact-heading text-center mb-5">
                 <span class="text">My Portfolio </span>
                 <h3 class="title-big">Hand Making <span>Gallery</span></h3>
@@ -142,7 +142,7 @@
             <div id="owl-portfolio" class="owl-carousel owl-theme mt-4 py-md-2 mb-4">
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/handmaking1.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/handmaking1.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Handmaking</h3>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/carving.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/carving.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Leather carve</h3>
@@ -164,8 +164,8 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
-                            <img src="assets/images/Profolio/handmaking2.jpg" class="img-fluid" alt="" />
+                        <a href="assets/images/Profolio/handmaking2.jpg" class="grid-anchor">
+                            <img src="assets/images/Profolio/handmaking2.jpg" class="img-fluid"  alt="" />
                             <div class="template-info">
                                 <h3>Handmaking</h3>
                                 <p class="description">Möbius strip</p>
@@ -175,7 +175,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="#assets/images/Profolio/model1.PNG" class="grid-anchor">
                             <img src="assets/images/Profolio/model1.PNG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>3D Model</h3>
@@ -186,7 +186,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/model2.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/model2.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>3D Model</h3>
@@ -197,7 +197,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/model3.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/model3.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>3D Model</h3>
@@ -208,7 +208,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/model4.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/model4.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>3D Model</h3>
@@ -219,7 +219,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/model5.PNG" class="grid-anchor">
                             <img src="assets/images/Profolio/model5.PNG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>3D Model</h3>
@@ -230,7 +230,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/model6.PNG" class="grid-anchor">
                             <img src="assets/images/Profolio/model6.PNG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>3D Model</h3>
@@ -241,7 +241,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/model7.PNG" class="grid-anchor">
                             <img src="assets/images/Profolio/model7.PNG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>3D Model</h3>
@@ -252,7 +252,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/model8.PNG" class="grid-anchor">
                             <img src="assets/images/Profolio/model8.PNG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>3D Model</h3>
@@ -270,7 +270,7 @@
 <!-- //home page contact section -->
 <div class="copyright py-sm-5 py-4 text-center">
   <div class="container">
-    <p class="copy-footer-29">Copyright &copy; 2022.LERIC All rights reserved.</p>
+    <p class="copy-footer-29">Copyright &copy; 2022.LiuYang All rights reserved.</p>
   </div>
 </div>
 <!-- move top -->
