--- a/Photography.html
+++ b/Photography.html
@@ -143,7 +143,7 @@
             <div id="owl-portfolio" class="owl-carousel owl-theme mt-4 py-md-2 mb-4">
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography1.JPG" class="grid-anchor">
                             <img src="assets/images/Profolio/photography1.JPG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography4.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/photography4.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography9.JPG" class="grid-anchor">
                             <img src="assets/images/Profolio/photography9.JPG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -176,7 +176,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography10.JPG" class="grid-anchor">
                             <img src="assets/images/Profolio/photography10.JPG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -187,7 +187,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography11.JPG" class="grid-anchor">
                             <img src="assets/images/Profolio/photography11.JPG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -198,7 +198,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography12.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/photography12.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -209,7 +209,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography13.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/photography13.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography </h3>
@@ -220,7 +220,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography2.JPG" class="grid-anchor">
                             <img src="assets/images/Profolio/photography2.JPG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -231,7 +231,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography3.JPG" class="grid-anchor">
                             <img src="assets/images/Profolio/photography3.JPG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -242,7 +242,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography5.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/photography5.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -253,7 +253,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography6.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/photography6.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -264,7 +264,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography7.JPG" class="grid-anchor">
                             <img src="assets/images/Profolio/photography7.JPG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
@@ -275,7 +275,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/photography8.JPG" class="grid-anchor">
                             <img src="assets/images/Profolio/photography8.JPG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Photography</h3>
