--- a/contact.html
+++ b/contact.html
@@ -137,15 +137,15 @@
         <div class="container py-lg-5 py-md-3">
             <div class="row">
                 <div class="col-lg-6">
-                    <span class="text">My Plan</span>
-                    <h3 class="title-big"><span>Build Self Website</span> and develop my game</h3>
-                    <p class="mt-4">My dream is to create the most immersive games in the world, and all of these skills are needed</p>
+                    <span class="text">About Me</span>
+                    <h3 class="title-big"><span>Build Self Website</span> and develop game</h3>
+                    <p class="mt-4">“There are three responses to a piece of design–<br> Yes, No, and WOW! Wow is the one to aim for.”<br> — Milton Glaser</p>
                     <ul class="service-list mt-md-5 mt-4">
-                        <li class="service-link"><a href="./UI.html">UI/UX design and Development</a></li>
-                        <li class="service-link"><a href="./Game.html">Game development</a></li>
+                        <li class="service-link"><a href="./UI.html">UI</a></li>
+                        <li class="service-link"><a href="./Game.html">Game</a></li>
                         <li class="service-link"><a href="./Draw.html">Drawing</a></li>
-                        <li class="service-link"><a href="./3D.html">3D Modeling</a></li>
-                        <li class="service-link"><a href="./Photography.html">Photoshop,Photograhy and video clip</a></li>
+                        <li class="service-link"><a href="./3D.html">3D</a></li>
+                        <li class="service-link"><a href="./Photography.html">Photo</a></li>
                     </ul>
                     <a href="#url" class="btn btn-style btn-empty p-0">View my all services <span></span></a>
                 </div>
@@ -158,7 +158,7 @@
         </div>
     </div>
 </section>
-	  <section class="w3l-homeblock2" id="skills">
+	<!--  <section class="w3l-homeblock2" id="skills">
     <div class="midd-w3 py-5">
         <div class="container py-lg-5 py-md-3">
             <div class="row">
@@ -212,11 +212,11 @@
             </div>
         </div>
     </div>
-</section>
+</section>-->
 <!-- //home page about section -->
 
 <!-- home page about section -->
-<section class="w3l-homeblock3" id="awards">
+<!--<section class="w3l-homeblock3" id="awards">
     <div class="midd-w3 py-5">
         <div class="container py-lg-5 py-md-3">
             <div class="row">
@@ -263,19 +263,18 @@ ard2.png" class="img-fluid pos-img2" alt="" />
             </div>
         </div>
     </div>
-</section>
+</section>-->
 <section class="w3l-contactblock" id="contact">
     <div class="midd-w3 py-5">
         <div class="container py-lg-4 py-md-3">
             <div class="contact-heading text-center">
-                <span class="text">Get in touch- with Me </span>
-                <h3 class="title-big">Are you ready to <span>work together?</span></h3>
-                <p class="mt-4">Let's start a Project! Hire Me.</p>
+                <span class="text">Contact Me </span>
+                <h3 class="title-big">ARE YOU      <span>READY?</span></h3>
+                <p class="mt-4">Let's do it</p>
             </div>
             <div class="row mt-md-5 mt-4 pt-lg-3">
                 <div class="col-lg-5">
-                    <p>Like Every Realistic In Coming
-                    </p>
+                    
                     <ul class="address mt-md-5 mt-4">
                         <li class="mb-3">
                             <p><span class="fa fa-phone"></span> <a href="tel:+404-11-22-89">+1-912-398-4996</a></p>
@@ -283,9 +282,7 @@ ard2.png" class="img-fluid pos-img2" alt="" />
                         <li class="mb-4">
                             <p><span class="fa fa-envelope-open"></span> <a href="mailto:Lerically@163.com">Lerically@163.com</a></p>
                         </li>
-                        <li class="">
-                            <p><span class="fa fa-map-marker"></span> Unknow</p>
-                        </li>
+                        
                     </ul>
 
                 </div>
