--- a/portfolio.html
+++ b/portfolio.html
@@ -134,16 +134,16 @@
 <!-- home page portfolio section -->
 <section class="w3l-portflioblock" id="awards">
     <div class="midd-w3 py-5">
-        <div class="container py-lg-4 py-md-3">
+        <div>
             <div class="contact-heading text-center mb-5">
-                <span class="text">My Portfolio </span>
-                <h3 class="title-big">Portfolio <span> Classification</span></h3>
+                <span class="text">Portfolio </span>
+                <h3 class="title-big">Art Gallery  <span> Start From here</span></h3>
             </div>
             <div id="owl-portfolio" class="owl-carousel owl-theme mt-4 py-md-2 mb-4">
                 <div class="item">
                     <div class="portfolio-content">
                         <a href="Draw.html" class="grid-anchor">
-                            <img src="assets/images/Profolio/digital6.jpg" class="img-fluid" alt="" width="300"/>
+                            <img src="assets/images/Profolio/digital6.jpg" class="img-fluid" alt=""/>
                             <div class="template-info">
                                 <h3>Drawing</h3>
                                 <p class="description">Drawing Portfolio</p>
@@ -154,7 +154,7 @@
                 <div class="item">
                     <div class="portfolio-content">
                         <a href="3D.html" class="grid-anchor">
-                            <img src="assets/images/Profolio/model1.PNG" class="img-fluid" alt="" height="300"/>
+                            <img src="assets/images/Profolio/model1.PNG" class="img-fluid" alt=""/>
                             <div class="template-info">
                                 <h3>Handmaking</h3>
                                 <p class="description">Handmaking portfolio </p>
@@ -165,7 +165,7 @@
                 <div class="item">
                     <div class="portfolio-content">
                         <a href="Photography.html" class="grid-anchor">
-                            <img src="assets/images/Profolio/photography12.jpg" class="img-fluid" alt="" width="320"/>
+                            <img src="assets/images/Profolio/photography12.jpg" class="img-fluid" alt=""/>
                             <div class="template-info">
                                 <h3>Photography</h3>
                                 <p class="description">Photography portfolio </p>
@@ -176,7 +176,7 @@
                 <div class="item">
                     <div class="portfolio-content">
                         <a href="UI.html" class="grid-anchor">
-                            <img src="assets/images/Profolio/UI3.jpg" class="img-fluid" alt="" width="90px"/>
+                            <img src="assets/images/Profolio/UI3.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>UI</h3>
                                 <p class="description">UI/UX portfolio</p>
@@ -187,11 +187,7 @@
                 <div class="item">
                     <div class="portfolio-content">
                         <a href="Game.html" class="grid-anchor">
-							<br>
-							
-                            <img src="assets/images/Profolio/game2.png" class="img-fluid" alt="" width="500" />
-							<br>
-							<br>
+                            <img src="assets/images/Profolio/game2.png" class="img-fluid" alt=""/>
                             <div class="template-info">
                                 <h3>Game</h3>
                                 <p class="description">Game portfolio</p>
