--- a/Draw.html
+++ b/Draw.html
@@ -133,15 +133,15 @@
 <!-- home page portfolio section -->
 <section class="w3l-portflioblock" id="awards">
     <div class="midd-w3 py-5">
-        <div class="container py-lg-4 py-md-3">
+        <div >
             <div class="contact-heading text-center mb-5">
                 <span class="text">My Portfolio </span>
-                <h3 class="title-big">Draw<span>Work</span></h3>
+                <h3 class="title-big">Draw     <span>Work</span></h3>
             </div>
             <div id="owl-portfolio" class="owl-carousel owl-theme mt-4 py-md-2 mb-4">
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/Digital1.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/Digital1.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Digital</h3>
@@ -152,7 +152,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/Digital2.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/Digital2.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Digital</h3>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/Digital3.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/Digital3.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Digital</h3>
@@ -174,7 +174,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/digital4.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/digital4.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Digital</h3>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/digital5.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/digital5.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Digital</h3>
@@ -196,7 +196,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/digital6.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/digital6.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Digital</h3>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/digital7.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/digital7.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Digital </h3>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/digital8.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/digital8.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Digital</h3>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/digital9.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/digital9.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Digital</h3>
@@ -240,7 +240,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/oilPainting1.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/oilPainting1.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Oil painting</h3>
@@ -251,7 +251,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/oilPainting2.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/oilPainting2.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Oil painting</h3>
@@ -262,7 +262,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/oilPainting3.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/oilPainting3.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Oil painting</h3>
@@ -273,7 +273,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/oilPainting5.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/oilPainting5.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Digital</h3>
@@ -284,7 +284,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/oilPainting6.jpg" class="grid-anchor">
                             <img src="assets/images/Profolio/oilPainting6.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Oil painting</h3>
@@ -295,7 +295,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/wallpaper1.gif" class="grid-anchor">
                             <img src="assets/images/Profolio/wallpaper1.gif" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Wallpaper</h3>
@@ -306,7 +306,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/wallpaper2.gif" class="grid-anchor">
                             <img src="assets/images/Profolio/wallpaper2.gif" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Wallpaper</h3>
@@ -317,7 +317,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/wallpaper3.PNG" class="grid-anchor">
                             <img src="assets/images/Profolio/wallpaper3.PNG" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Wallpaper</h3>
@@ -328,7 +328,7 @@
                 </div>
 				<div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/wallpaper4.png" class="grid-anchor">
                             <img src="assets/images/Profolio/wallpaper4.png" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Wallpaper</h3>
