--- a/Game.html
+++ b/Game.html
@@ -134,7 +134,7 @@
 <!-- home page portfolio section -->
 <section class="w3l-portflioblock" id="awards">
     <div class="midd-w3 py-5">
-        <div class="container py-lg-4 py-md-3">
+        <div >
             <div class="contact-heading text-center mb-5">
                 <span class="text">My Portfolio </span>
                 <h3 class="title-big">Game <span>Project</span></h3>
@@ -142,7 +142,7 @@
             <div id="owl-portfolio" class="owl-carousel owl-theme mt-4 py-md-2 mb-4">
                 <div class="item">
                     <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
+                        <a href="assets/images/Profolio/game2.png" class="grid-anchor">
                             <img src="assets/images/Profolio/game2.png" class="img-fluid" alt="" />
                             <div class="template-info">
                                 <h3>Game</h3>
