--- a/index.html
+++ b/index.html
@@ -138,10 +138,11 @@
         <div class="banner-wrapper text-center">
 			 
             <div class="">
-                <span class="text">About Me</span>
+                <span class="text">/\<br>
+				||</span>
                 <h1 class="mb-4 title">Hello, <span class="type-js"><span class="text-js">I’m Yang</span></span><br>
-                    I’m working as UI/UX designer.</h1>
-                <p class="mx-lg-5">I love <strong>Game design</strong> and <strong>Interactive Design</strong> and have been working on my portfolio since 2019. I'm 17 years old now, quite a young designer, isn't it? but i can handle a lot of thing.
+                    I’m working as Interactive designer.</h1>
+                <p class="mx-lg-5">I love <strong>Game design</strong> and <strong>Interactive Design</strong> and i've enjoyed my career.
                 </p>
             </div>
            <div class="row">
