--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="utf-8">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="./asset/css/StartMenustyle.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  
   <section>
       <script src="./asset/js/FadeAlpha.js"></script>
     <div class="grid-container ">
@@ -20,7 +24,8 @@
       <div class="grid-LeftButton">
         <a href="./asset/HomePage.html">
         <button class="LeftButton" type="button" value=""><H1>Discovery More</H1></button>
-        </a>
+        
+      </a>
       </div>
 
       <div class="grid-Logo">
