--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             <div class="text-content">
                                 <h1><b>Project: ShanHe</b></h1>
                                 <span>UE5</span>
-                                <p>#1 You are allowed to use Sentra Template for your business or client websites. You can use it for commercial or non-commercial or educational purposes.</p>
+                                <p>This man looks agitated. <br>Something must have happened here.</p>
                             </div>
                         </div>
 
@@ -191,7 +191,7 @@
                             <div class="text-content">
                                 <h1><b>Project: Auk Odyssey</b></h1>
                                 <span>UE5, Autodesk Maya</span>
-                                <p>#1 You are allowed to use Sentra Template for your business or client websites. You can use it for commercial or non-commercial or educational purposes.</p>
+                                <p>How does this penguin look like a primate, <br> can't believe what's happening to him.</p>
                             </div>
                         </div>
 
@@ -203,7 +203,7 @@
                             <div class="text-content">
                                 <h1><b>The Village</b></h1>
                                 <span>UE5</span>
-                                <p>#1 You are allowed to use Sentra Template for your business or client websites. You can use it for commercial or non-commercial or educational purposes.</p>
+                                <p>Find a way to get into this village and collect enough fruits for the toll.</p>
                             </div>
                         </div>
 
@@ -214,7 +214,7 @@
                             <div class="text-content">
                                 <h1><b>Bio-Lab</b></h1>
                                 <span>UE5, Autodesk Maya, Adobe Substance 3D Painter</span>
-                                <p>#1 You are allowed to use Sentra Template for your business or client websites. You can use it for commercial or non-commercial or educational purposes.</p>
+                                <p>Why does a biologically damaged lab look so new?Someone must have restarted the lab.</p>
                             </div>
                         </div>
 
