--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             Your browser does not support the video tag.
         </video>
         <h1 data-lang="en">Hi, I'm Yang, a Game Designer</h1>
-        <h1 data-lang="zh" style="display: none;">你好，我是刘杨,一名游戏设计师</h1>
+        <h1 data-lang="zh" style="display: none;">你好，我是杨,一名游戏设计师</h1>
     </section>
 
     <!-- 关于我 -->
@@ -517,10 +517,10 @@
             <!-- 文字部分 -->
             <div class="about-text">
                 <p data-lang="en">
-                    I am a versatile creative professional specializing in game design, photography, and UI design. With over 5 years of industry experience, I am passionate about delivering exceptional experiences through innovative design and technical expertise.
+                    Hello, I'm Yang, a game designer. I'm always striving to combine creativity and technology to create games that are both deep and entertaining.
                 </p>
                 <p data-lang="zh" style="display: none;">
-                    我是一名多才多艺的创意工作者，专注于游戏设计、摄影和UI设计。拥有超过5年的行业经验，我致力于通过创新的设计和精湛的技术为用户带来卓越的体验。
+                    大家好，我是游戏设计师杨。我一直在努力将创意和技术相结合，创作出既深刻又有趣的游戏。
                 </p>
             </div>
             <!-- 社交媒体按钮 -->
@@ -562,9 +562,9 @@
                 <img src="https://dl.dropboxusercontent.com/scl/fi/kb7z69g0a4iitu7rzoud0/336.png?rlkey=mk6mvh59hhpxhg46vqe9dbz0j&st=f8mi7a3a" alt="UI Design">
                 <div class="portfolio-content">
                     <h3 data-lang="en">UI Design</h3>
-                    <h3 data-lang="zh" style="display: none;">UI设计</h3>
-                    <p data-lang="en">Interface design for a mobile application.</p>
-                    <p data-lang="zh" style="display: none;">一款移动应用的界面设计。</p>
+                    <h3 data-lang="zh" style="display: none;">场景设计</h3>
+                    <p data-lang="en">Game Environment</p>
+                    <p data-lang="zh" style="display: none;">Game environment</p>
                 </div>
             </div>
         </div>
@@ -575,45 +575,7 @@
         <h2 data-lang="en">Blog</h2>
         <h2 data-lang="zh" style="display: none;">博客</h2>
         <div class="blog-posts">
-            <!-- 示例博客文章 1 -->
-            <div class="blog-post">
-                <h3 data-lang="en">The Art of Game Design: Balancing Fun and Challenge</h3>
-                <h3 data-lang="zh" style="display: none;">游戏设计的艺术：平衡乐趣与挑战</h3>
-                <p data-lang="en">In this post, I explore the delicate balance between making a game fun and challenging. Learn how to keep players engaged without frustrating them.</p>
-                <p data-lang="zh" style="display: none;">在这篇文章中，我探讨了如何平衡游戏的乐趣与挑战。了解如何在不让玩家感到沮丧的情况下保持他们的参与感。</p>
-                <a href="#" data-lang="en">Read more...</a>
-                <a href="#" data-lang="zh" style="display: none;">阅读更多...</a>
-            </div>
-
-            <!-- 示例博客文章 2 -->
-            <div class="blog-post">
-                <h3 data-lang="en">Photography Tips: Capturing the Perfect Moment</h3>
-                <h3 data-lang="zh" style="display: none;">摄影技巧：捕捉完美瞬间</h3>
-                <p data-lang="en">Discover my top tips for capturing stunning photographs, from lighting to composition. Perfect for both beginners and seasoned photographers.</p>
-                <p data-lang="zh" style="display: none;">了解我从光线到构图的顶级摄影技巧，适合初学者和经验丰富的摄影师。</p>
-                <a href="#" data-lang="en">Read more...</a>
-                <a href="#" data-lang="zh" style="display: none;">阅读更多...</a>
-            </div>
-
-            <!-- 示例博客文章 3 -->
-            <div class="blog-post">
-                <h3 data-lang="en">UI Design Trends 2023: What's Hot and What's Not</h3>
-                <h3 data-lang="zh" style="display: none;">2023年UI设计趋势：热门与过时</h3>
-                <p data-lang="en">Stay ahead of the curve with my analysis of the latest UI design trends in 2023. Learn what's in and what's out in the world of user interfaces.</p>
-                <p data-lang="zh" style="display: none;">通过我对2023年最新UI设计趋势的分析，保持领先。了解用户界面设计领域的热门与过时趋势。</p>
-                <a href="#" data-lang="en">Read more...</a>
-                <a href="#" data-lang="zh" style="display: none;">阅读更多...</a>
-            </div>
-
-            <!-- 示例博客文章 4 -->
-            <div class="blog-post">
-                <h3 data-lang="en">Behind the Scenes: Creating the World of ShanHe</h3>
-                <h3 data-lang="zh" style="display: none;">幕后花絮：打造《山河》的世界</h3>
-                <p data-lang="en">Take a behind-the-scenes look at the development of ShanHe, from concept art to final design. Learn how we brought this Wuxia world to life.</p>
-                <p data-lang="zh" style="display: none;">深入了解《山河》的开发过程，从概念艺术到最终设计。了解我们如何将这个武侠世界变为现实。</p>
-                <a href="#" data-lang="en">Read more...</a>
-                <a href="#" data-lang="zh" style="display: none;">阅读更多...</a>
-            </div>
+          
         </div>
     </section>
 
