--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
 
     <!-- 页脚 -->
     <footer>
-        <p>&copy; 2023 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2023 Liu Yang. All rights reserved.</p>
     </footer>
 
     <!-- 右下角切换按钮 -->
