--- a/ShanHe.html
+++ b/ShanHe.html
@@ -697,7 +697,7 @@
 
   <!-- ======== 页脚 ======== -->
   <footer>
-    <p>&copy; 2023 Yang. All rights reserved.</p>
+    <p>&copy; 2023 Liu Yang. All rights reserved.</p>
   </footer>
 
   <!-- ======== 右下角功能按钮 ======== -->
