--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                 <div class="software-icon"><img src="./assets/photo/Icon/ProcreateLogo.png" alt="Procreate"></div>
                             </div>
                             <div class="project-tags">
-                                <span class="project-tag">Adventure</span>
+                                <span class="project-tag">Platform</span>
                                 <span class="project-tag">2D</span>
                                 <span class="project-tag">UE5</span>
                             </div>
