--- a/AukOdyssey.html
+++ b/AukOdyssey.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/shanhe.css">
+    <link rel="stylesheet" href="./assets/css/image-viewer.css">
 
     <!-- 预连接视频资源 -->
     <link rel="preconnect" href="https://www.youtube.com/embed/Sheep?autoplay=1&mute=1&loop=1&playlist=Sheep&controls=0">
@@ -32,7 +33,7 @@
                 <a href="./index.html#portfolio" class="nav-link" data-section="portfolio" role="menuitem" tabindex="0">Portfolio</a>
             </div>
             <div class="nav-controls">
-                <a href="./assets/file/Resume_Yang.pdf" class="nav-link" role="menuitem" tabindex="0">Download CV</a>
+                <a href="./assets/file/Resume_Yang.pdf" class="nav-link" role="menuitem" tabindex="0">Resume</a>
             </div>
         </div>
     </nav>
@@ -191,7 +192,7 @@
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h3>GERLOGU</h3>
+                    <h3>Quick Link</h3>
                     <ul>
                         <li><a href="./index.html#Home">HOME</a></li>
                         <li><a href="./index.html#portfolio">PORTFOLIO</a></li>
@@ -207,5 +208,6 @@
 
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/mobile-nav.js" defer></script>
+    <script src="./assets/js/image-viewer.js" defer></script>
 </body>
 </html>
