--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <a href="#home" class="nav-link" data-section="home" role="menuitem" tabindex="0">Home</a>
                 <a href="#skills" class="nav-link" data-section="skills" role="menuitem" tabindex="0">Skills</a>
                 <a href="#about" class="nav-link" data-section="about" role="menuitem" tabindex="0">About</a>
-                <a href="#portfolio" class="nav-link" data-section="portfolio" role="menuitem" tabindex="0">Portfolio</a>
+                <a href="./portfolio-category.html" class="nav-link" data-section="portfolio" role="menuitem" tabindex="0">Portfolio</a>
             </div>
             <div class="nav-controls">
-                <a href="./assets/file/Resume_Yang.pdf" class="nav-link" role="menuitem" tabindex="0">Download CV</a>
+                <a href="./assets/file/Resume_Yang.pdf" class="nav-link" role="menuitem" tabindex="0">Resume</a>
             </div>
         </div>
     </nav>
@@ -176,7 +176,7 @@
             <div class="about-content">
             <!-- 图片部分 -->
             <div class="about-image">
-                <img src="./assets/photo/Yang.jpg" alt="Yang的照片" loading="lazy" width="400" height="400">
+                <img src="./assets/photo/Yang.jpg" alt="Yang的照片">
             </div>
             <!-- 文字部分 -->
             <div class="about-text">
@@ -205,14 +205,14 @@
                 <div class="portfolio-header">
                     <h3 class="typewriter-title">My Work<span class="highlight-text">|</span></h3>
                     <p class="portfolio-description">Check out the games I have worked on!</p>
-                    <a href="#" class="view-portfolio-btn portfolio-nav"><i class="fas fa-eye"></i> View Portfolio</a>
+                    <a href="./portfolio-category.html" class="view-portfolio-btn portfolio-nav"><i class="fas fa-eye"></i> View Portfolio</a>
                 </div>
                 
                 <div class="portfolio-items">
                     <!-- 项目1 -->
                     <div class="portfolio-card" onclick="window.open('./ShanHe.html')" tabindex="0" role="button" aria-label="查看Project Downbelow项目详情">
                         <div class="card-image">
-                            <img src="./assets/photo/405/Logo.png" alt="Project Downbelow" loading="lazy" width="320" height="200">
+                            <img src="./assets/photo/405/Logo.png" alt="Vigor">
                         </div>
                         <div class="card-content">
                             <h4>SHANHE</h4>
@@ -235,7 +235,7 @@
                     <!-- 项目2 -->
                     <div class="portfolio-card" onclick="window.open('./AukOdyssey.html')">
                         <div class="card-image">
-                            <img src="./assets/photo/356/Title.png" alt="Vigor">
+                            <img src="./assets/photo/356/Title.png" alt="AukOdyssey">
                         </div>
                         <div class="card-content">
                             <h4>Auk Odessey</h4>
@@ -319,7 +319,7 @@
                     </div>
 
                     <!-- 更多项目提示 -->
-                    <div class="portfolio-card more-card" onclick="window.open('./coming-soon.html')">
+                    <div class="portfolio-card more-card" onclick="window.open('./portfolio-category.html')">
                         <div class="more-content">
                             <h4>... and more!</h4>
                         </div>
@@ -328,8 +328,6 @@
             </div>
         </div>
     </section>
-
-   
 
     <footer>
         <div class="footer-content">
@@ -369,7 +367,7 @@
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h3>GERLOGU</h3>
+                    <h3>Quick Link</h3>
                     <ul>
                         <li><a href="#home">HOME</a></li>
                         <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -382,8 +380,5 @@
             <p>&copy; 2025 Yang Liu. All rights reserved.</p>
         </div>
     </footer>
-
-    <!-- 引入JavaScript文件 -->
-    <script src="./assets/js/main.js"></script>
 </body>
 </html>
