--- a/coming-soon.html
+++ b/coming-soon.html
@@ -159,7 +159,7 @@
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h3>GERLOGU</h3>
+                    <h3>Quick Link</h3>
                     <ul>
                         <li><a href="./index.html#Home">HOME</a></li>
                         <li><a href="./index.html#portfolio">PORTFOLIO</a></li>
