--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a href="#home" class="nav-link" data-section="home" role="menuitem" tabindex="0">Home</a>
                 <a href="#skills" class="nav-link" data-section="skills" role="menuitem" tabindex="0">Skills</a>
                 <a href="#about" class="nav-link" data-section="about" role="menuitem" tabindex="0">About</a>
-                <a href="./portfolio-category.html" class="nav-link" data-section="portfolio" role="menuitem" tabindex="0">Portfolio</a>
+                <a href="#portfolio" class="nav-link" data-section="portfolio" role="menuitem" tabindex="0">Portfolio</a>
             </div>
             <div class="nav-controls">
                 <a href="./assets/file/Resume_Yang.pdf" class="nav-link" role="menuitem" tabindex="0">Resume</a>
@@ -205,7 +205,7 @@
                 <div class="portfolio-header">
                     <h3 class="typewriter-title">My Work<span class="highlight-text">|</span></h3>
                     <p class="portfolio-description">Check out the games I have worked on!</p>
-                    <a href="./portfolio-category.html" class="view-portfolio-btn portfolio-nav"><i class="fas fa-eye"></i> View Portfolio</a>
+                    <a href="./coming-soon.html" class="view-portfolio-btn portfolio-nav"><i class="fas fa-eye"></i> View Portfolio</a>
                 </div>
                 
                 <div class="portfolio-items">
@@ -319,7 +319,7 @@
                     </div>
 
                     <!-- 更多项目提示 -->
-                    <div class="portfolio-card more-card" onclick="window.open('./portfolio-category.html')">
+                    <div class="portfolio-card more-card" onclick="window.open('./coming-soon.html')">
                         <div class="more-content">
                             <h4>... and more!</h4>
                         </div>
